opam-version: "2.0"
maintainer: "hello@jsavary.com"
authors: ["Josiah Savary"]
homepage: "https://github.com/jozanza/re-winit"
bug-reports: "https://github.com/jozanza/re-winit/issues"
dev-repo: "git+https://github.com/jozanza/re-winit.git"
license: "ISC"

depends: [
    "ocaml" {>= "4.03.0"}
    "dune"
    "conf-rust-2018" {build}
]

build: [
    ["dune" "build" "-p" name]
    ["dune" "runtest" "-p" name] {with-test}
]

synopsis: """
OCaml/ReasonML bindings to winit
"""
