(rule
 (targets libwinit.a dllwinit.so)
 (deps (glob_files *.rs))
 (action
  (progn
   (run cargo build --release --target-dir %{project_root}/../../target)
   (run sh -c
     "mv %{project_root}/../../target/release/libre_winit.so ./dllwinit.so 2> /dev/null || \
      mv %{project_root}/../../target/release/libre_winit.dylib ./dllwinit.so")
   (run mv %{project_root}/../../target/release/libre_winit.a libwinit.a))))

(library
 (name winit)
 (public_name re-winit)
 (foreign_archives winit)
 (preprocess (pps ppx_deriving.show))
 (c_library_flags
  (-lpthread
   -lc 
   -lm 
   -framework CoreFoundation 
   -framework CoreGraphics
   -framework ColorSync
   -framework CoreVideo
   -framework AppKit)))
